force-app/main/default/objects/Copy__c/Copy__c.object-meta.xml
<CustomObject>
    <label>Copy</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Copy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>