force-app/main/default/objects/Copy__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <formula>Card__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>code</label>
    <type>Text</type>
</CustomField>