force-app/main/default/objects/Copy__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <label>Deck</label>
    <referenceTo>Deck__c</referenceTo>
    <relationshipLabel>Copies</relationshipLabel>
    <relationshipName>Copies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>