force-app/main/default/objects/Copy__c/fields/real_name__c.field-meta.xml
<CustomField>
    <fullName>real_name__c</fullName>
    <formula>Card__r.real_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>real name</label>
    <type>Text</type>
</CustomField>